
@startuml

entity "Hopital" {
  +id: int
  nom: String
  adresse: String
}

entity "Personne" {
  +id: int
  nom: String
  prenom: String
  naissance: DateTime
}

entity "Personnel" {
  embauche: DateTime
  finContrat: DateTime
  salaire: int
}

entity "Medecin" {
  specialite: String
}

entity "Infirmier" {
  service: String
}

entity "AgentEntretient" {
}

entity "Administratif" {
  service: String
}

entity "Patient" {
  +id: int
  antecedentsMedicaux: String
  raisonAccueil: String
  dateEntree: Date
  dateSortiePrevisionnelle: Date
  dateSortieReelle: Date
}

entity "VisiteMedicale" {
  +id: int
  date: Date
  examens: String
  commentaires: String
}

entity "CompteRendu" {
  +id: int
  date: Date
  examens: String
  commentaires: String
}

entity "Soin" {
  +id: int
  dateHeure: DateTime
  description: String
  medicaments: String
  quantite: int
}

entity "Reunion" {
  +id: int
  dateHeure: DateTime
}

entity "Service" {
  +id: int
  nom: String
}

entity "Chambre" {
  +numero: int
  etage: int
  capacite: int
}

entity "Lit" {
  +id: int
  numero: int
  dateDernierAgentEntretient: Date
}

Personne ||--o{ Personnel : "role"
Personne ||--o{ Patient : "role"

Personnel ||--o{ Medecin
Personnel ||--o{ Infirmier
Personnel ||--o{ AgentEntretient
Personnel ||--o{ Administratif

Hopital ||--o{ Personnel : "emploie"

Medecin ||--o{ VisiteMedicale : "réalise"
VisiteMedicale ||--|| CompteRendu : "produit"
VisiteMedicale ||--|| Patient : "pour"

Infirmier ||--o{ Soin : "délivre"
Soin ||--|| Patient : "à"

Reunion ||--o{ Soin : "décide"
Reunion ||--o{ Personnel : "participants"

Service ||--o{ Chambre : "contient"
Chambre ||--o{ Lit : "contient"
Lit ||--o{ Patient : "occupé par"

Service ||--|| Administratif : "responsable"
Service ||--|| Medecin : "référent"

@enduml
